--- a/src/assets/css/home/hero.css
+++ b/src/assets/css/home/hero.css
@@ -9,6 +9,10 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    padding-left: 30vh;;
+    min-height: 100vh;
+    justify-content: center;           /* Centrado vertical */
+    gap: var(--spacing-lg);            /* Espacio entre elementos */
   }
   
   /* Tipografía de Hero */
@@ -19,6 +23,8 @@
     font-weight: bold;
     color: var(--color-text-dark);
     text-align: left;
+    max-width: 500px; /* Ancho máximo para evitar que se extienda demasiado */
+    line-height: 1.4; /* Espaciado entre líneas */
   }
   
   .subtitle-hero {
