--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -38,6 +38,10 @@
   box-sizing: border-box;
 }
 
+html, body {
+  overflow-x:hidden;
+}
+
 /* ==== TIPOGRAFÍA ==== */
 body {
   font-family: 'Poppins', sans-serif;
