--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -42,6 +42,11 @@ html, body {
   overflow-x:hidden;
 }
 
+@media (max-width: 768px) {
+  html,body {
+    padding-top: 30px;  }
+}
+
 /* ==== TIPOGRAFÍA ==== */
 body {
   font-family: 'Poppins', sans-serif;
@@ -96,6 +101,16 @@ input[type="text"] {
   border-radius: 0.375rem;
   font-size: 1rem;
   transition: border-color 0.2s ease;
+}
+.app-container {
+  display: flex;
+  flex-direction: column; /* Asegura que los hijos se apilen verticalmente */
+  min-height: 100vh;      /* Ocupa toda la altura de la ventana */
+  width: 100%;
+}
+
+.content {
+  flex: 1; /* Hace que el contenido principal ocupe el espacio restante */
 }
 /* ==== RESPONSIVE ==== */
 @media (max-width: 768px) {
